Update meme image to a GIF for Valentine's Day

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <p>This is going to be the best Valentine's Day ever! 💝</p>
             
             <div class="meme-container">
-                <img src="https://i.imgflip.com/4/30b1gx.jpg" alt="Success meme" />
+                <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExcXBoczdsdmMydThpM2Z5bDBueXh1OWRyNmQzZnpxMTJiYTh6c3RscyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/PV7VZN4pix1EE2IAqo/giphy.gif" alt="Success meme" />
                 <p style="margin-top: 15px; font-style: italic; color: #888;">Me right now 😄</p>
             </div>
             
